@@ -248,6 +248,8 @@ sub make_plan {
 					       status => $status,
 					       labelstr  => $src_labelstr);
 
+    return Amanda::MainLoop::call_later($params{'plan_cb'}, "Dump not found", undef) if !@dumps;
+
     # Create a hash of the latest datestamp of each dle.
     my %datestamp;
     if ($params{'latest_fulls'}) {
@@ -359,6 +361,8 @@ sub make_plan {
 	    push @dumps, $options[$j];
 	}
     }
+
+    return Amanda::MainLoop::call_later($params{'plan_cb'}, "Dump not found", undef) if !@dumps;
 
     # at this point we have exactly one instance of each dump in @dumps.
 
